# market_simu

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  DOMAIN_SETUP.md  Dockerfile  ENV_SETUP.md  GITHUB_SETUP.md  INSTALL_SQLITE.md  NGINX_OPTIONAL.md  POSTGRES_CONNECTION_FIX.md  POSTGRES_SETUP.md  POSTGRES_SSL_FIX.md  PUSH_TO_GITHUB.md  README.md  TESTING.md  WEB_ACCESS.md  auto_debug.sh  check_postgres.sh  complete_ssh_setup.sh  create_and_push.sh  create_repo_instructions.md  debug_crash.sh  deploy.sh  docker-compose.yml  fix_postgres_auth.sh  fix_postgres_local.sh  install-service.sh  market-simulation.service  quick_fix_postgres.sh  run_with_env.sh  setup_database.sh  setup_github.sh  setup_ssh_push.sh
.github/workflows/: build.yml
include/: Account.h  MarketServer.h  MatchingEngine.h  OrderBook.h  OrderLogger.h  SettlementEngine.h  Trade.h  Trader.h  WebServer.h
scripts/: README.md  USAGE_100_TRADERS.md  connect_trader.sh  query_orders.py  query_orders_pg.py  simulate_100_traders.py  submit_order.sh  submit_trades.py
src/: Account.cpp  MarketServer.cpp  MatchingEngine.cpp  OrderBook.cpp  OrderLogger.cpp  SettlementEngine.cpp  Trader.cpp  WebServer.cpp  main.cpp
tests/: TestClient.cpp  TestClient.h  test_market.cpp
web/: index.html
